# erust-stm32g0-hal

./: Cargo.toml
.github/workflows/: cargo-build.yaml
src/: adc.rs  exti.rs  gpio.rs  i2c.rs  iwdg.rs  lib.rs  pwr.rs  rcc.rs  timer.rs  usb.rs
src/rcc/: config.rs  lptim.rs  reset_enable.rs
src/timer/: lptim.rs  timers.rs
src/usb/: btable.rs  buffers.rs  device.rs  endpoint.rs
