[package]
name = "stm32g0-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
stm32g0 = { git = "https://github.com/stm32-rs/stm32-rs-nightlies", rev = "f9d02d3" }

cortex-m = "0.7"
embedded-hal = "1"
fugit = "0.3"
paste = "1"
scopeguard = { version = "1", default-features = false }

[features]
stm32g071 = ["stm32g0/stm32g071"]
stm32g0b1 = ["stm32g0/stm32g0b1"]
