[package]
name = "stm32g0-hal"
version = "0.1.0"
edition = "2024"

[dependencies]
stm32g0 = { git = "https://github.com/stm32-rs/stm32-rs-nightlies" }
# stm32g0 = { path = "../stm32-rs/stm32g0" }

cortex-m = "0.7"
critical-section = "1"
embedded-hal = "1"
fugit = "0.3"
paste = "1"
rtt-target = { version = "0.6", optional = true }
bitfield = { version = "0.19", optional = true }
usb-device = { version = "0.3", optional = true }
vcell = { version = "0.1", optional = true }

[dev-dependencies]
critical-section = { version = "1", features = ["std"] }

[features]
usb_debug = ["dep:rtt-target"]
stm32g071 = ["stm32g0/stm32g071"]
stm32g0b1 = ["stm32g0/stm32g0b1", "dep:bitfield", "dep:usb-device", "dep:vcell"]
